# tp-highload-http-server

./: .gitignore  CMakeLists.txt  build.sh
http_server/: CMakeLists.txt
http_server/include/http_server/: connection.hpp  exception.hpp  server.hpp
http_server/include/http_server/http/: http.hpp  request.hpp  response.hpp
http_server/include/http_server/utils/: file_descriptor.hpp  parser.hpp
http_server/src/: connection.cpp  exception.cpp  main.cpp  server.cpp
http_server/src/http/: http.cpp  request.cpp  response.cpp
http_server/src/utils/: file_descriptor.cpp  parser.cpp
tests/: httptest.py
